text alignment correction

--- a/css/form.css
+++ b/css/form.css
@@ -71,7 +71,6 @@ input:active{
 }
 
 .nav-container{
-  text-align: right;
   display: inline;
 }
 
